Dont write the profiler logs to disk by default, only when the user wants them

--- a/src/main/resources/configurations/bukkit.yml
+++ b/src/main/resources/configurations/bukkit.yml
@@ -55,7 +55,7 @@ database:
     url: jdbc:sqlite:{DIR}{NAME}.db
 minetickmod:
     profiler-log-interval: 30
-    profiler-write-log: true
+    profiler-write-log: false
     profiler-write-interval: 10
     orebfuscatedWorlds: []
     packetCompressionLevel: 7
